--- a/prj_hello_cargo/Cargo.toml
+++ b/prj_hello_cargo/Cargo.toml
@@ -2,6 +2,7 @@
 name = "prj_hello_cargo"
 version = "0.1.0"
 authors = ["Fadjar Fathurrahman <fadjar.fathurrahman@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 [dependencies]
+assert_cmd = "1"
